# windows-drivers-fuzzer

./: .gitignore  Cargo.toml  README.md  push_to_github.ps1  setup_github.ps1
releases/: .gitkeep
scripts/: HTTP_analysis.json  HWiNFO_x64_214_ghidra_v2.json  HWiNFO_x64_ghidra_v2.json  RTCore64_ghidra_v2.json  afd_analysis.json  afd_ghidra_analysis.json  afd_ghidra_v2.json  ahcache_ghidra_v2.json  analyze_driver.ps1  analyze_driver.py  analyze_ioctls.java  analyze_ioctls_v2.java  batch_analyze.bat  convert_ioctls.py  cpuz162_ghidra_v2.json  http_ghidra_v2.json  quick_scan.py
src/: clfs_fuzzer.rs  corpus.rs  coverage.rs  driver.rs  driver_hunter.rs  exploit.rs  exploit_patterns.rs  font_fuzzer.rs  gdi_race_fuzzer.rs  learner.rs  main.rs  mutator.rs  poc_generator.rs  process_injector.rs  pte_exploit.rs  race.rs  rl_fuzzer.rs  stateful.rs  tcp_client.rs  win32k_fuzzer.rs  win32k_fuzzer_original.rs
tools/: ahcache.json  ahcache_real.json  bulk_triage.py  clfs.json  http.json  msfuzz_scan.py  msfuzz_symbolic.py  ntfs.json  procexp.json  scan_driver.py  stress_poc.py  tcpip.json  triage_crash.py
tools/angr_analyzer/: README.md  analyze_driver.py  quick_scan.py
