[package]
name = "ladybug"
version = "0.1.0"
edition = "2021"
description = "Coverage-guided Windows driver fuzzer"
authors = ["Security Researcher"]

[dependencies]
# Windows API bindings
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem", 
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Networking_WinSock",
]}

# CLI and utilities
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
colored = "2.0"
hex = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = "0.4"
indicatif = "0.17"
rayon = "1.8"
ctrlc = "3.4"
regex = "1.10"

# For coverage/instrumentation
memmap2 = "0.9"
goblin = "0.7"  # PE parsing

[profile.release]
opt-level = 3
lto = true
